<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/home_list"
            android:icon="@drawable/nav_home"
            android:title="@string/home_list"
            />
        <item
            android:id="@+id/field_list"
            android:icon="@drawable/nav_field"
            android:title="@string/field_list" />
        <item android:id="@+id/weather_list"
            android:icon="@drawable/nav_weather"
            android:title="@string/weather_list"/>
    </group>
    <group
        android:id="@+id/group_two"
        android:checkableBehavior="single">

        <item
            android:id="@+id/notification_list"
            android:icon="@drawable/nav_weather"
            android:title="@string/notification_list" />
        <item
            android:id="@+id/profile_list"
            android:icon="@drawable/nav_profile"
            android:title="@string/profile_list" />

        <item
            android:id="@+id/setting_lsit"
            android:icon="@drawable/nav_settings"
            android:title="@string/setting_list" />
        <item
            android:id="@+id/about_list"
            android:icon="@drawable/nav_about"
            android:title="@string/about_list" />
        <item
            android:id="@+id/logout_list"
            android:icon="@drawable/nav_logout"
            android:title="@string/logout_list" />
    </group>


</menu>